--- a/Ui-With-Sass/css/styles.css
+++ b/Ui-With-Sass/css/styles.css
@@ -1,3 +1,22 @@
 #main-nav {
   background-color: #032f3e;
 }
+#main-nav ul {
+  width: 100;
+  list-style: none;
+}
+#main-nav ul:after {
+  content: "";
+  display: block;
+  clear: both;
+}
+#main-nav ul li {
+  float: left;
+  width: 16.6666666667%;
+}
+#main-nav ul li a {
+  color: #f8f9fb;
+  text-decoration: none;
+  padding: 20px;
+  text-align: center;
+}
