--- a/Ui-With-Sass/scss/styles.scss
+++ b/Ui-With-Sass/scss/styles.scss
@@ -7,7 +7,61 @@ $ofwhite:#f8f9fb;
 $bannerHeading:46px;
 
 
+// #main-nav{
+//     background-color: $deepblue; // using varibles
+//     ul{
+//         width:100;
+//         list-style: none;
+//         &:after {
+//             content: "";
+//             display: block;
+//             clear: both;
+
+//         }
+//     }
+//     li{
+//         float: left;
+//         width: (100%/6);
+
+
+//     }
+//     a{
+//         color:$ofwhite;
+//         text-decoration: none;
+//         padding:20px;
+//         // padding-top: 20px;
+//         // display: block;
+//         text-align: center;
+//     }
+// }
+
+// nested
+
 #main-nav{
-    background-color: $deepblue;
+    background-color: $deepblue; // using varibles
+    ul{
+        width:100;
+        list-style: none;
+        &:after {
+            content: "";
+            display: block;
+            clear: both;
+
+        }
+        li{
+            float: left;
+            width: (100%/6);
+    
+    
+            a{
+                color:$ofwhite;
+                text-decoration: none;
+                padding:20px;
+                // padding-top: 20px;
+                // display: block;
+                text-align: center;
+            }
+        }
+    }
 }
 
