--- a/Ui-With-Sass/scss/styles.scss
+++ b/Ui-With-Sass/scss/styles.scss
@@ -70,84 +70,132 @@ $bannerHeading:46px;
 // mixins
 // // mixins
 
-@mixin banner{
-    width:100%;
-    position: relative;
-    color:white;
-    .banner-content{
-        position :absolute;
-        top:50px;
-        width:100%;
+// @mixin banner{
+//     width:100%;
+//     position: relative;
+//     color:white;
+//     .banner-content{
+//         position :absolute;
+//         top:50px;
+//         width:100%;
         
-    }
-    img{
-        width:100%;
+//     }
+//     img{
+//         width:100%;
         
-    }
-    span{
-        font-size: $bannerHeading;
-        display: block;
-        text-transform: uppercase;
-        font-weight: bold;
+//     }
+//     span{
+//         font-size: $bannerHeading;
+//         display: block;
+//         text-transform: uppercase;
+//         font-weight: bold;
         
-    }
-    span.title{
-        font-weight: normal;
-        margin-bottom: 30px;
+//     }
+//     span.title{
+//         font-weight: normal;
+//         margin-bottom: 30px;
         
-    }
-}
+//     }
+// }
+
+// #main-nav{
+//     background: $deepblue;
+//     ul{
+//         width:100%;
+//         list-style: none;
+        
+//     }
+//     li{
+//         float:left;
+//         width:14%;
+        
+//     }
+//     a{
+//         color: $ofwhite;
+//         text-decoration:none;
+//         padding:16px;
+//         display:block;
+//         text-align: center;
+        
+        
+//     }// end main-div
+// }
+// // we are unable to see this deep blue b/c of li and ui 
+// //  nested not proper 
+// // so we are going to fix this with by CLEAR FIXING RULE
+
+// #main-nav ul:after{
+//     content: "";
+//     display: block;
+//     clear:both // clears all of the li tags that comes before 
+    
+// }
+// section h1{
+//     font-size: $sectionHeading;
+//     color: $deepblue;
+// }
+
+// // after creating mixins you have to apply then only you can see tham 
+
+// .lead-banner{
+//     @include banner;
+//     text-align: right;
+// }
+// .lessons-banner{
+//     @include banner();
+//     li{
+//         text-transform: uppercase;
+//         font-size: 20px;
+//         max-width: 500px;
+//         margin:60px 0;
+
+//     }
+// }
+
+
+//  import 
+@import "variables";
+@import "mixins";
+@import "reset";
+
+
+
+
 
 #main-nav{
-    background: $deepblue;
+    background: $deepBlue ;
     ul{
         width:100%;
         list-style: none;
+        // &:after {
+        //     content: "";
+        //     display: block;
+        //     clear:both 
+        // }  // instead we can do by mixin and import 
+    
+            @include clearFixing;
+            
+        
         
     }
     li{
         float:left;
-        width:14%;
-        
+        width:150px;
+        @include mQ(800px){
+            width:100%;
+         } 
     }
     a{
-        color: $ofwhite;
+        color:$ofwhite;
         text-decoration:none;
         padding:16px;
         display:block;
         text-align: center;
+        // 7       pseudo classes 
+        &:hover{
+            background:opacify($color: #000000, $amount: 1);
+        }
         
         
     }// end main-div
-}
-// we are unable to see this deep blue b/c of li and ui 
-//  nested not proper 
-// so we are going to fix this with by CLEAR FIXING RULE
-
-#main-nav ul:after{
-    content: "";
-    display: block;
-    clear:both // clears all of the li tags that comes before 
-    
-}
-section h1{
-    font-size: $sectionHeading;
-    color: $deepblue;
-}
-
-// after creating mixins you have to apply then only you can see tham 
-
-.lead-banner{
-    @include banner;
-    text-align: right;
-}
-.lessons-banner{
-    @include banner();
-    li{
-        text-transform: uppercase;
-        font-size: 20px;
-        max-width: 500px;
-        margin:60px 0;
-
-    }
 }
