functions and passing variables into mixins

--- a/Ui-With-Sass/scss/mixins.scss
+++ b/Ui-With-Sass/scss/mixins.scss
@@ -36,7 +36,7 @@
       clear: both;
     }
   }
-  
+  //  grid with scss 
   @mixin grid($cols, $mgn){
     float: left;
     width: ((100% - (($cols - 1) * $mgn)) / $cols );
