--- a/Ui-With-Sass/scss/variables.scss
+++ b/Ui-With-Sass/scss/variables.scss
@@ -1,9 +1,5 @@
-/* VARIABLES */
-
-// Colours
-$deepBlue: #032f3e;
-$offWhite: #f8f9fb;
-
-// Font sizes
-$bannerHeading: 42px;
-$sectionHeading: 24px;
+// varibales  #032f3e 
+$deepBlue:#032f3e ;
+$sectionHeading :24px;
+$ofwhite:#f8f9fb;
+$bannerHeading:46px;
